fix flex on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -189,7 +189,6 @@ nav ul {
 main {
     width: 100%;
     height: 88vh;
-    display: flex;
 	margin-top: 12vh;
     position: relative;
 }
@@ -292,6 +291,9 @@ main {
 }
 
 @media screen and (min-width: 1025px) {
+    main {
+        display: flex;
+    }
     .page-template-inner .column {
         width: 20%;
         max-width: 655px;
@@ -308,9 +310,7 @@ main {
 .page-template-inner {
 
     .column {
-        
-        
-        
+      
     }
 }
 .inner-content {
@@ -324,9 +324,6 @@ main {
 
 
 @media screen and (max-width: 1024px) {
-    main {
-        flex-direction: column; 
-    }
     .column {
         width: 100%;
 		height: calc(88vh / 5);
